[gd_scene load_steps=16 format=3 uid="uid://btfycm2ekt0i7"]

[ext_resource type="AudioStream" uid="uid://dud26gwijfgyk" path="res://audio/Harmony in Creation.mp3" id="1_3hsxw"]
[ext_resource type="Script" path="res://audio_demo.gd" id="1_cbxpo"]
[ext_resource type="Script" path="res://drum_looper.gd" id="3_ou6hb"]
[ext_resource type="AudioStream" uid="uid://dlk2a6qj2ofam" path="res://samples/clap-tape.wav" id="4_ox6nn"]
[ext_resource type="AudioStream" uid="uid://cb1o8e0owocjf" path="res://samples/crash-808.wav" id="5_o3wu7"]
[ext_resource type="AudioStream" uid="uid://couhdc41jgulk" path="res://samples/crash-noise.wav" id="6_6x61a"]
[ext_resource type="AudioStream" uid="uid://n6ln0ae1cqds" path="res://samples/hihat-analog.wav" id="7_sxfx5"]
[ext_resource type="AudioStream" uid="uid://c7kjyu6ymaqex" path="res://samples/kick-acoustic01.wav" id="8_o2amh"]
[ext_resource type="AudioStream" uid="uid://cpuu7he2aax7f" path="res://samples/openhat-analog.wav" id="9_8ulml"]
[ext_resource type="AudioStream" uid="uid://bagmoy3tt5why" path="res://samples/perc-chirpy.wav" id="10_8x5h3"]
[ext_resource type="AudioStream" uid="uid://tq63sllx00oh" path="res://samples/snare-dist01.wav" id="11_08xrn"]
[ext_resource type="AudioStream" uid="uid://djtb1m43o8q0d" path="res://samples/snare-punch.wav" id="12_a4fo7"]
[ext_resource type="AudioStream" uid="uid://bxcrxrwe6vmjd" path="res://samples/tom-lofi.wav" id="13_31tq5"]
[ext_resource type="AudioStream" uid="uid://cnk8d6q23suq6" path="res://samples/tom-short.wav" id="14_k3cbx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svh1v"]
size = Vector2(40, 39)

[node name="audio_demo" type="Node2D"]
script = ExtResource("1_cbxpo")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(85, 46)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_svh1v")

[node name="ColorRect" type="ColorRect" parent="Area2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_3hsxw")
panning_strength = 3.0

[node name="Button" type="Button" parent="."]
offset_left = 436.0
offset_top = 208.0
offset_right = 477.0
offset_bottom = 239.0
text = "Play"

[node name="HSlider" type="HSlider" parent="."]
offset_left = 210.0
offset_top = 333.0
offset_right = 549.0
offset_bottom = 349.0
max_value = 4.0
step = 0.01

[node name="HSlider2" type="HSlider" parent="."]
offset_left = 437.0
offset_top = 387.0
offset_right = 1034.0
offset_bottom = 403.0
max_value = 20.0
step = 0.01

[node name="drum_looper" type="Node2D" parent="."]
script = ExtResource("3_ou6hb")

[node name="Clap-tape" type="AudioStreamPlayer" parent="drum_looper"]
stream = ExtResource("4_ox6nn")

[node name="Crash-808" type="AudioStreamPlayer" parent="drum_looper"]
stream = ExtResource("5_o3wu7")

[node name="Crash-noise" type="AudioStreamPlayer" parent="drum_looper"]
stream = ExtResource("6_6x61a")

[node name="Hihat-analog" type="AudioStreamPlayer" parent="drum_looper"]
stream = ExtResource("7_sxfx5")

[node name="Kick-acoustic01" type="AudioStreamPlayer" parent="drum_looper"]
stream = ExtResource("8_o2amh")

[node name="Openhat-analog" type="AudioStreamPlayer" parent="drum_looper"]
stream = ExtResource("9_8ulml")

[node name="Perc-chirpy" type="AudioStreamPlayer" parent="drum_looper"]
stream = ExtResource("10_8x5h3")

[node name="Snare-dist01" type="AudioStreamPlayer" parent="drum_looper"]
stream = ExtResource("11_08xrn")

[node name="Snare-punch" type="AudioStreamPlayer" parent="drum_looper"]
stream = ExtResource("12_a4fo7")

[node name="Tom-lofi" type="AudioStreamPlayer" parent="drum_looper"]
stream = ExtResource("13_31tq5")

[node name="Tom-short" type="AudioStreamPlayer" parent="drum_looper"]
stream = ExtResource("14_k3cbx")

[node name="Timer" type="Timer" parent="drum_looper"]
wait_time = 0.5
autostart = true

[node name="Button2" type="Button" parent="."]
offset_left = 84.0
offset_top = 144.0
offset_right = 171.0
offset_bottom = 175.0
text = "Next Note
"

[node name="HSlider3" type="HSlider" parent="."]
offset_left = 112.0
offset_top = 253.0
offset_right = 716.0
offset_bottom = 269.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="timeout" from="drum_looper/Timer" to="drum_looper" method="_on_timer_timeout"]
[connection signal="button_down" from="Button2" to="drum_looper" method="_on_button_2_button_down"]
[connection signal="value_changed" from="HSlider3" to="." method="_on_h_slider_3_value_changed"]
